# AudioXCFrameworks

./: .gitignore  .gitmodules  LICENSE.txt  Makefile  README.md  build-xcframework.sh  xcframework.mk
mac/MAC_SDK-src/: CMakeLists.txt  License.txt  Readme.txt
mac/MAC_SDK-src/Analyze/Sample 1/: Sample 1.cpp  Sample 1.sln  Sample 1.vcxproj  Sample 1.vcxproj.filters
mac/MAC_SDK-src/Compress/Sample 1/: Sample 1.cpp  Sample 1.sln  Sample 1.vcxproj  Sample 1.vcxproj.filters
mac/MAC_SDK-src/Compress/Sample 2/: Sample 2.cpp  Sample 2.sln  Sample 2.vcxproj  Sample 2.vcxproj.filters
mac/MAC_SDK-src/Decompress/Sample 1/: Sample 1.cpp  Sample 1.sln  Sample 1.vcxproj  Sample 1.vcxproj.filters
mac/MAC_SDK-src/Decompress/Sample 2/: Sample 2.cpp  Sample 2.sln  Sample 2.vcxproj  Sample 2.vcxproj.filters
mac/MAC_SDK-src/Decompress/Sample 3/: Sample 3.cpp  Sample 3.sln  Sample 3.vcxproj  Sample 3.vcxproj.filters
mac/MAC_SDK-src/Shared/: APETag.h  All.h  CharacterHelper.h  MACLib.h  Version.h
mac/MAC_SDK-src/Shared/32/: MACDll.lib
mac/MAC_SDK-src/Shared/64/: MACDll64.lib
mac/MAC_SDK-src/Source/Console/: Console.cpp  Console.h  Console.rc  resource.h
mac/MAC_SDK-src/Source/DirectShow Filter/: DirectShow Filter.def  DirectShow Filter.rc  RegistryUtils.cpp  RegistryUtils.h  main.cpp  main.h  resource.h
mac/MAC_SDK-src/Source/DirectShow Filter/DirectShow SDK/: amextra.cpp  amextra.h  amfilter.cpp  amfilter.h  cache.h  combase.cpp  combase.h  cprop.cpp  cprop.h  ddmm.cpp  ddmm.h  dllsetup.h  fourcc.h  msgthrd.h  mtype.cpp  outputq.cpp  outputq.h  perflog.cpp  pullpin.cpp  pullpin.h  refclock.h  reftime.h  renbase.cpp  renbase.h  schedule.cpp  seekpt.cpp  strmctl.cpp  sysclock.cpp  transfrm.cpp  transfrm.h  transip.h  videoctl.h  vtrans.cpp  vtrans.h  winctrl.h  winutil.cpp  winutil.h  wxdebug.h  wxlist.h  wxutil.cpp  (+1 more)
mac/MAC_SDK-src/Source/DirectShow Filter/DirectX SDK/: amfilter.h  amvideo.cpp  combase.cpp  combase.h  cprop.cpp  ctlutil.cpp  ctlutil.h  ddmm.h  dllentry.cpp  mtype.cpp  mtype.h  outputq.cpp  refclock.cpp  renbase.cpp  schedule.cpp  source.cpp  source.h  streams.h  strmctl.h  (+10 more)
mac/MAC_SDK-src/Source/MAC/: APEButtons.h  APEInfoDlg.cpp  APEInfoDlg.h  APEInfoFormatDlg.cpp  APEInfoFormatDlg.h  APLHelper.cpp  APLHelper.h  AboutDlg.cpp  AboutDlg.h  FLACTag.cpp  FLACTag.h  Filename.h  FolderDialog.cpp  FolderDialog.h  Format.h  FormatAPE.cpp  FormatAPE.h  FormatArray.cpp  FormatArray.h  FormatPlugin.cpp  FormatPlugin.h  FormatPluginConfigureDlg.cpp  FormatPluginConfigureDlg.h  FormatPluginInfoDlg.cpp  FormatPluginInfoDlg.h  HyperLink.cpp  HyperLink.h  IntArray.cpp  IntArray.h  MAC.cpp  MAC.h  MAC.manifest  MAC.rc  MAC.vcxproj  MAC.vcxproj.filters  MACDlg.cpp  MACDlg.h  MACFile.cpp  MACFile.h  MACFileArray.cpp  (+26 more)
mac/MAC_SDK-src/Source/MACDll/: CEDecoder.cpp  CEEncoder.cpp  CoolEdit.cpp  Filters.h  In2.h  MACDll.cpp  MACDll.def  MACDll.rc  MACDllApp.cpp  MACDllApp.h  Out.h  Winamp2.cpp  Winamp2.h  WinampSettingsDlg.cpp  WinampSettingsDlg.h  resource.h  stdafx.h
mac/MAC_SDK-src/Source/MACLib/: APECompress.cpp  APECompress.h  APECompressCore.cpp  APECompressCore.h  APECompressCreate.cpp  APECompressCreate.h  APEDecompress.cpp  APEDecompress.h  APEDecompressCore.cpp  APEDecompressCore.h  APEHeader.cpp  APEHeader.h  APEInfo.cpp  APEInfo.h  APELink.cpp  APELink.h  APESimple.cpp  APETag.cpp  APETag.h  BitArray.cpp  BitArray.h  FloatTransform.cpp  FloatTransform.h  MACLib.cpp  MACLib.h  MACProgressHelper.cpp  MACProgressHelper.h  MD5.cpp  MD5.h  NNFilter.cpp  NNFilter.h  NNFilterAVX2.cpp  NNFilterAVX512.cpp  NNFilterCommon.h  NNFilterGeneric.cpp  NNFilterNeon.cpp  NNFilterSSE2.cpp  NNFilterSSE4.1.cpp  NewPredictor.cpp  NewPredictor.h  (+10 more)
mac/MAC_SDK-src/Source/Shared/: APEInfoDialog.cpp  APEInfoDialog.h  All.h  BufferIO.cpp  BufferIO.h  CGdiPlusBitmap.h  CPUFeatures.cpp  CPUFeatures.h  CRC.cpp  CRC.h  CharacterHelper.cpp  CircleBuffer.cpp  CircleBuffer.h  GDIBitmapPtr.h  GlobalFunctions.cpp  GlobalFunctions.h  ID3Genres.h  IO.h  MFCGlobals.h  MFCWarnings.h  MemoryIO.cpp  MemoryIO.h  RollBuffer.h  Semaphore.cpp  Semaphore.h  SmartPtr.h  StdLibFileIO.cpp  StdLibFileIO.h  Thread.cpp  Thread.h  Version.h  WAVInfoDialog.cpp  WholeFileIO.cpp  WholeFileIO.h  WinFileIO.cpp  WinFileIO.h
mpc/musepack-src/: CMakeLists.txt  Makefile.am  Makefile.cvs  configure.in  libmpc.kdevelop
mpc/musepack-src/include/: CMakeLists.txt
mpc/musepack-src/include/mpc/: mpc_types.h  mpcdec.h
mpc/musepack-src/libmpcdec/: mpc_reader.c
mpc/musepack-src/libmpcenc/: CMakeLists.txt  Makefile.am  bitstream.c  encode_sv7.c  libmpcenc.h  quant.c
mpc/musepack-src/libmpcpsy/: CMakeLists.txt  Makefile.am  ans.c  libmpcpsy.h  psy.c
mpc/musepack-src/libwavformat/: CMakeLists.txt  Makefile.am  input.c  libwaveformat.h  output.c
mpc/musepack-src/mpc2sv8/: CMakeLists.txt  Makefile.am  mpc2sv8.c
mpc/musepack-src/mpcchap/: CMakeLists.txt  Makefile.am  dictionary.c  dictionary.h  iniparser.c  iniparser.h  mpcchap.c
mpc/musepack-src/mpccut/: CMakeLists.txt  Makefile.am  mpccut.c
mpc/musepack-src/mpcdec/: CMakeLists.txt  Makefile.am  mpcdec.c
mpc/musepack-src/mpcenc/: CMakeLists.txt  Makefile.am  config.h  keyboard.c  mpcenc.c  mpcenc.h  pipeopen.c  predict.h  stderr.c  wave_in.c  winmsg.c
mpc/musepack-src/mpcgain/: CMakeLists.txt  Makefile.am  mpcgain.c
mpc/musepack-src/wavcmp/: CMakeLists.txt  Makefile.am  wavcmp.c
mpc/musepack-src/win32/: basename.c  dirent.c  dirent.h  libcommon.vcproj  libcommon_2005.vcproj  libmpcdec.vcproj  libmpcdec_2005.vcproj  libmpcenc.vcproj  libmpcpsy.vcproj  libwavformat.vcproj  mpc2sv8.vcproj  mpccut.vcproj  mpcdec.vcproj  mpcenc.vcproj  mpcgain.vcproj  musepack.sln  musepack_2005.sln
tta-cpp/libtta-cpp-src/: Makefile.am  Makefile.in  Makefile.mipsel  Makefile.rm  README  config.guess  config.h.in  configure  configure.ac  filter.h  filter_arm.S  libtta.cpp  libtta.h  libtta.sln  libtta.vcxproj  libtta.vcxproj.filters  ltmain.sh
tta-cpp/libtta-cpp-src/console/: Makefile.am  Makefile.in  Makefile.mipsel  console.sln  console.vcxproj  console.vcxproj.filters  tta.cpp  tta.h
(+581 files in other folders)
